--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -656,6 +656,7 @@ en:
       default_role_pickups: Pickup days
       default_role_suppliers: Suppliers
       disable_invite: Disable invites
+      disable_members_overview: Disable members list
       email_from: From address
       email_replyto: Reply-to address
       email_sender: Sender address
